# WindEngine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  Taskfile.yaml  vcpkg.json
editor/: CMakeLists.txt
engine/: CMakeLists.txt
engine/shaders/: compile.sh  simple.frag  vert.spv
engine/src/: CMakeLists.txt
engine/src/engine/: CMakeLists.txt  app.hpp  appState.hpp  defines.hpp  engine.cpp  engine.hpp  main.hpp  utils.hpp
engine/src/engine/core/: CMakeLists.txt  appConfig.cpp  appConfig.h  assert.cpp  assert.hpp  logger.cpp  logger.hpp  window.cpp  window.hpp
engine/src/engine/core/memory/: CMakeLists.txt  allocationManager.cpp  allocationManager.hpp  allocator.hpp  cAllocator.cpp  cAllocator.hpp  linearAllocator.cpp  linearAllocator.hpp
engine/src/engine/core/renderer/: CMakeLists.txt  renderer.hpp
engine/src/engine/core/renderer/vulkan/: CMakeLists.txt  instance.cpp  instance.hpp  vulkanBuffer.cpp  vulkanBuffer.hpp  vulkanCommandBuffer.cpp  vulkanCommandBuffer.hpp  vulkanContext.cpp  vulkanContext.hpp  vulkanDevice.cpp  vulkanDevice.hpp  vulkanHandle.hpp  vulkanImage.cpp  vulkanImage.hpp  vulkanInstance.cpp  vulkanInstance.hpp  vulkanPipeline.cpp  vulkanPipeline.hpp  vulkanRenderPass.cpp  vulkanRenderPass.hpp  vulkanRenderer.cpp  vulkanRenderer.hpp  vulkanSwapchain.cpp  vulkanSwapchain.hpp
shaders/: compile.sh
test/: CMakeLists.txt  main.cpp
